Fix for paragraph spacing
Refs https://github.com/simonw/simonwillisonblog/issues/451#issuecomment-2186834196

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -717,6 +717,7 @@ div#primary div.blogmark {
   font-size: 0.9em;
 }
 div#primary div.blogmark p,
+div#primary div.quote p,
 div#primary .elsewhere-in-primary p:not(:last-child) {
   margin-bottom: 0.8em;
 }
